--- a/ToDo-app/package.json
+++ b/ToDo-app/package.json
@@ -7,6 +7,7 @@
     "build": "ng build",
     "lint": "ng lint",
     "e2e": "ng e2e",
+    "test": "ng test",
     "postinstall": "ng build -aot --prod"
   },
   "private": true,
