--- a/package.json
+++ b/package.json
@@ -7,7 +7,6 @@
     "build": "ng build",
     "lint": "ng lint",
     "e2e": "ng e2e",
-    "test": "ng test",
     "postinstall": "ng build --aot --prod"
   },
   "private": true,
@@ -24,7 +23,11 @@
     "@angular/router": "~9.1.0",
     "rxjs": "~6.5.4",
     "tslib": "^1.10.0",
-    "zone.js": "~0.10.2"
+    "zone.js": "~0.10.2",
+    "body-parser": "^1.19.0",
+    "cors": "^2.8.5",
+    "express": "^4.17.1",
+    "mongoose": "^5.9.11"
   },
   "devDependencies": {
     "@angular-devkit/build-angular": "~0.901.0",
